--- a/src/main/resources/templates/chatbots/not-answered-question-answer.html
+++ b/src/main/resources/templates/chatbots/not-answered-question-answer.html
@@ -23,14 +23,14 @@
     <div class="container">
         <div class="pt-3">
             <h1>Set ChatBot Question Answer</h1>
-            <form method="POST" th:action="@{/chatbot-question-answer-save(notAnsweredQuestionId=${notAnsweredQuestionId})}" th:object="${chatBotQuestionAnswer}">
+            <form method="POST" th:action="@{/not-answered-question-answer-save(notAnsweredQuestionId=${notAnsweredQuestionId})}" th:object="${chatBotQuestionAnswer}">
                 <div class="form-group">
                     <label for="question">Question</label>
-                    <input class="form-control" id="question" required th:field="*{question}" type="text" disabled>
+                    <input class="form-control" id="question" required th:field="*{question}" type="text">
                 </div>
                 <div class="form-group">
                     <label for="answer">Answer</label>
-                    <input class="form-control" id="answer" placeholder="Enter Answer of this Question" required th:field="*{answer}" type="text">
+                    <textarea class="form-control" id="answer" placeholder="Enter Answer of this Question" required rows="5" th:field="*{answer}"></textarea>
                 </div>
                 <button class="btn btn-primary" type="submit">Submit</button>
             </form>
