--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -13,7 +13,7 @@
         <a class="btn" th:href="@{/show-discussion-list}">Group Discussions</a>
         <a class="btn" th:href="@{/show-chat-list}">ChatBot Support</a>
         <a th:if="${(isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin)}" class="btn"
-           th:href="@{/show-not-answered-list}">ChatBot Configuration</a>
+           th:href="@{/show-not-answered-question-list}">ChatBot Configuration</a>
 
         <!-- Add more buttons as needed -->
     </div>
