--- a/src/main/resources/templates/chatbots/chat-list.html
+++ b/src/main/resources/templates/chatbots/chat-list.html
@@ -56,6 +56,10 @@
                         </div>
                     </div>
                 </div>
+                <br>
+                <div class="chat-container">
+                    <a class="btn btn-primary mb-3" th:href="@{/}">Clear Chat</a>
+                </div>
             </div>
         </div>
     </div>
