TODO List set up

--- a/src/main/resources/templates/chatbots/chat-list.html
+++ b/src/main/resources/templates/chatbots/chat-list.html
@@ -58,7 +58,11 @@
                 </div>
                 <br>
                 <div class="chat-container">
-                    <a class="btn btn-primary mb-3" th:href="@{/}">Clear Chat</a>
+                    <!-- Clear Chat button is shown only if chatList is not empty -->
+                    <div th:if="${chatList != null and chatList.size() > 0}">
+                        <a class="btn btn-primary mb-3" th:href="@{/}">Clear Chat</a>
+                        <!--TODO: a chat clear route should be implemented by userId-->
+                    </div>
                 </div>
             </div>
         </div>
