--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -71,6 +71,9 @@
         </div>
         <button type="submit" class="btn btn-primary">Register</button>
       </form>
+      <span class="text-center">Already a Member?</span>
+      <a th:href = "@{/show-login-page}" class="text-center">Login</a>
+
     </div>
   </div>
 <!--  Toast-->
