--- a/src/main/resources/templates/chatbots/chatbot-question-answer-list.html
+++ b/src/main/resources/templates/chatbots/chatbot-question-answer-list.html
@@ -25,8 +25,9 @@
 <main class="main-content" role="main">
     <div class="container">
         <div class="pt-3">
-            <div th:if="${isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin}">
+            <div th:if="${isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin}" class="d-flex justify-content-between">
                 <a class="btn btn-success mb-3" th:href="@{/show-chatbot-question-answer-add-page}">Add New Question-Answer</a>
+                <a class="btn btn-warning mb-3 ml-auto" th:href="@{/show-not-answered-question-list}">View Not Answered Question List</a>
             </div>
             <h1>ChatBot Question Answer List</h1>
             <div class="table-responsive">
