--- a/src/main/resources/templates/profiles/profile.html
+++ b/src/main/resources/templates/profiles/profile.html
@@ -31,8 +31,10 @@
                                     <div class="card-block text-center text-white">
                                         <div class="m-b-25" style="position: relative;">
                                             <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image">
+                                            <!--TODO: image should be imageUrl-->
                                             <br>
                                             <a th:href="@{/}" class="update-image-link">Update Image</a>
+                                            <!--TODO: update imageUrl with userId-->
                                         </div>
                                         <h3 class="f-w-600" th:text="${user.userName}"></h3>
                                         <b>(<span th:text="${user.role}"></span>)</b>
@@ -71,6 +73,7 @@
                                             <div class="col-sm-6">
                                                 <p class="m-b-10 f-w-600"></p>
                                                 <a class="btn btn-success mb-3" th:href="@{/}">Update Profile</a>
+                                                <!--TODO: update user with userId-->
                                             </div>
                                         </div>
                                     </div>
