update profile done

--- a/src/main/resources/templates/profiles/profile.html
+++ b/src/main/resources/templates/profiles/profile.html
@@ -72,7 +72,7 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <p class="m-b-10 f-w-600"></p>
-                                                <a class="btn btn-success mb-3" th:href="@{/updateUser/{userId}(userId=${user.id})}">Update Profile</a>
+                                                <a class="btn btn-success mb-3" th:href="@{/show-update-profile-page(id=${user.id})}">Update Profile</a>
                                                 <!--TODO: update user with userId-->
                                             </div>
                                         </div>
