--- a/src/main/resources/templates/messages/message-list.html
+++ b/src/main/resources/templates/messages/message-list.html
@@ -32,7 +32,7 @@
                 <div class="chat-box" id="chatbox">
                     <div th:each="message: ${userTherapistMessageList}">
                         <!-- Check if the message sender is the current user -->
-                        <div th:if="${message.senderId == userId}" class="message-container">
+                        <div class="message-container" th:if="${message.senderId == userId}">
                             <div class="sender-message">
                                 <span th:text="${message.content}"></span>
                                 <div class="time-stamp">
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <!-- Check if the message sender is the therapist -->
-                        <div th:if="${message.senderId != userId}" class="message-container">
+                        <div class="message-container" th:if="${message.senderId != userId}">
                             <div class="receiver-message">
                                 <span th:text="${message.content}"></span>
                                 <div class="time-stamp">
@@ -54,20 +54,27 @@
                 <!-- Send New Message -->
                 <div th:if="${(isUser != null and !#strings.isEmpty(isUser) and isUser)
                      or (isTherapist != null and !#strings.isEmpty(isTherapist) and isTherapist)}">
-                    <form id="sendMessageForm" method="POST" th:action="@{/new-message-save(receiverId = ${param.receiverId})}"
+                    <form id="sendMessageForm" method="POST"
+                          th:action="@{/new-message-save(receiverId = ${param.receiverId})}"
                           th:object="${userTherapistMessage}">
                         <div class="form-group chat-input-group">
-                            <textarea id="userInput" class="user-input" th:field="*{content}" placeholder="Type your message..." required></textarea>
-                            <button id="sendMessageBtn" class="send-button" type="submit">Send</button>
+                            <textarea class="user-input" id="userInput" placeholder="Type your message..."
+                                      required th:field="*{content}"></textarea>
+                            <button class="send-button" id="sendMessageBtn" type="submit">Send</button>
                         </div>
                     </form>
                 </div>
-                <!-- Clear Chat button -->
-                <div th:if="${userTherapistMessageList != null and userTherapistMessageList.size() > 0}">
-                    <button id="clearChatBtn" class="btn btn-warning mb-3">Clear Chat</button>
-                    <span class="text-right">
-                    <button id="refreshBtn" class="btn btn-info mb-3">Refresh</button>
-                    </span>
+                <!-- Clear Chat and Refresh button -->
+                <div class="d-flex justify-content-between"
+                     th:if="${userTherapistMessageList != null and userTherapistMessageList.size() > 0}">
+                    <a class="btn btn-warning mb-3" id="clearChatBtn"
+                       th:href="@{/clear-messages(receiverId=${param.receiverId})}">
+                        Clear Chat <i class="fas fa-trash-alt"></i>
+                    </a>
+                    <a class="btn btn-info mb-3" id="refreshBtn"
+                       th:href="@{/show-user-therapist-message-list(receiverId=${param.receiverId})}">
+                        Refresh <i class="fas fa-sync-alt"></i>
+                    </a>
                 </div>
             </div>
         </div>
