--- a/src/main/resources/templates/videos/video-list.html
+++ b/src/main/resources/templates/videos/video-list.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<div th:replace="fragments/common-header :: common-header"></div>
+
 <head>
-    <meta charset="UTF-8">
     <title>Videos-MHSN</title>
-
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap4.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
 
