--- a/src/main/resources/templates/chatbots/chat-list.html
+++ b/src/main/resources/templates/chatbots/chat-list.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>ChatBot-MHSN</title>
+<div th:replace="fragments/common-header :: common-header"></div>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap4.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+<head>
+    <title>ChatBot-MHSN</title>
     <link href="css/chatbot.css" rel="stylesheet">
 
 
@@ -38,9 +32,10 @@
                         <form method="POST" th:action="@{/new-chat-save(userId=${userId})}"
                               th:object="${userChatBotHistory}">
                             <div class="form-group chat-input-group">
-                                <input type="text" id="userInput" class="user-input" th:field="*{question}" placeholder="Type your message..."
-                                       required rows="3">
-                                <button id="sendMessageBtn" class="send-button" type="submit">Send</button>
+                                <input class="user-input" id="userInput" placeholder="Type your message..." required
+                                       rows="3"
+                                       th:field="*{question}" type="text">
+                                <button class="send-button" id="sendMessageBtn" type="submit">Send</button>
                             </div>
                         </form>
                     </div>
