--- a/src/main/resources/templates/chatbots/chatbot-question-answer-update.html
+++ b/src/main/resources/templates/chatbots/chatbot-question-answer-update.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Update ChatBot Question Answer-MHSN</title>
+<div th:replace="fragments/common-header :: common-header"></div>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+<head>
+    <title>Update ChatBot Question Answer-MHSN</title>
 </head>
 <body>
 
@@ -23,16 +19,19 @@
     <div class="container">
         <div class="pt-3">
             <h1>Update ChatBot Question Answer</h1>
-            <form method="POST" th:action="@{/chatbot-question-answer-update}" th:object="${chatBotQuestionAnswerToUpdate}">
+            <form method="POST" th:action="@{/chatbot-question-answer-update}"
+                  th:object="${chatBotQuestionAnswerToUpdate}">
                 <div class="form-group">
                     <label for="question">Question</label>
-                    <input class="form-control" id="question"  placeholder="Enter Question" required th:field="*{question}" type="text">
+                    <input class="form-control" id="question" placeholder="Enter Question" required
+                           th:field="*{question}" type="text">
                 </div>
                 <div class="form-group">
                     <label for="answer">Answer</label>
-                    <textarea class="form-control" id="answer" placeholder="Enter Answer of this Question" required rows="5" th:field="*{answer}"></textarea>
+                    <textarea class="form-control" id="answer" placeholder="Enter Answer of this Question" required
+                              rows="5" th:field="*{answer}"></textarea>
                 </div>
-                <input type="hidden" th:field="*{id}" th:value="${chatBotQuestionAnswerToUpdate.id}">
+                <input th:field="*{id}" th:value="${chatBotQuestionAnswerToUpdate.id}" type="hidden">
                 <button class="btn btn-primary" type="submit">Submit</button>
             </form>
         </div>
