--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<div th:replace="fragments/common-header :: common-header"></div>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Login-MHSN</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+    <title>Login-MHSN</title>
 </head>
 <body>
 
@@ -16,44 +14,47 @@
 <div th:replace="fragments/sidebar :: sidebar"></div>
 
 <!-- Main content area for Login Page -->
-<main role="main" class="main-content">
-  <div class="container">
-    <div class="pt-3">
-      <h1>Login to Mental Health Support Network</h1>
-      <form method="POST" th:action="@{/login}">
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input class="form-control" id="email" placeholder="Enter your email" th:name="email" type="email">
+<main class="main-content" role="main">
+    <div class="container">
+        <div class="pt-3">
+            <h1>Login to Mental Health Support Network</h1>
+            <form method="POST" th:action="@{/login}">
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input class="form-control" id="email" placeholder="Enter your email" th:name="email" type="email">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input class="form-control" id="password" placeholder="Enter your password" th:name="password"
+                           type="password">
+                </div>
+                <button class="btn btn-primary" type="submit">Login</button>
+            </form>
+            <a class="text-center" th:href="@{/}">Forget Password? </a>
+            <!--      TODO: Retrieve Password by user information-->
+            <div class="text-center">Not Registered?
+                <a class="text-center" th:href="@{/show-registration-page}">Register</a>
+            </div>
         </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input class="form-control" id="password" placeholder="Enter your password" th:name="password" type="password">
+    </div>
+    <!-- Bootstrap Toast for displaying error message -->
+    <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
+         th:if="${error}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Error</strong>
+            <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-      </form>
-      <a th:href = "@{/}" class="text-center">Forget Password? </a>
-      <!--      TODO: Retrieve Password by user information-->
-      <div class="text-center">Not Registered?
-        <a th:href = "@{/show-registration-page}" class="text-center">Register</a>
-      </div>
+        <div class="toast-body bg-danger text-white" th:text="${error}"></div>
     </div>
-  </div>
-  <!-- Bootstrap Toast for displaying error message -->
-  <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;" th:if="${error}">
-    <div class="toast-header bg-dark">
-      <strong class="mr-auto text-white">Error</strong>
-      <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
+    <!-- Bootstrap Toast for displaying success message -->
+    <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 50px; margin-right: 30px;"
+         th:if="${success}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Success</strong>
+            <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
+        </div>
+        <div class="toast-body bg-success text-white" th:text="${success}"></div>
     </div>
-    <div class="toast-body bg-danger text-white" th:text="${error}"></div>
-  </div>
-  <!-- Bootstrap Toast for displaying success message -->
-  <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 50px; margin-right: 30px;" th:if="${success}">
-    <div class="toast-header bg-dark">
-      <strong class="mr-auto text-white">Success</strong>
-      <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
-    </div>
-    <div class="toast-body bg-success text-white" th:text="${success}"></div>
-  </div>
 </main>
 
 <!-- Footer -->
@@ -66,14 +67,14 @@
 
 <!-- Script to activate Bootstrap Toast -->
 <script>
-  $(document).ready(function () {
-      $('.toast').toast({
-          autohide: true,
-          delay: 5000, // 5 seconds
-          animation: true,
-          position: 'top-end'
-      }).toast('show');
-  });
+    $(document).ready(function () {
+        $('.toast').toast({
+            autohide: true,
+            delay: 5000, // 5 seconds
+            animation: true,
+            position: 'top-end'
+        }).toast('show');
+    });
 </script>
 
 </body>
