--- a/src/main/resources/templates/messages/message-list.html
+++ b/src/main/resources/templates/messages/message-list.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Messages-MHSN</title>
+<div th:replace="fragments/common-header :: common-header"></div>
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap4.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+<head>
+    <title>Messages-MHSN</title>
     <link href="css/message.css" rel="stylesheet">
 
 
@@ -32,7 +26,7 @@
                 <div class="chat-box" id="chatbox">
                     <div th:each="message: ${userTherapistMessageList}">
                         <!-- Check if the message sender is the current user -->
-                        <div class="message-container" th:if="${message.senderId == userId}">
+                        <div class="message-container" th:if="${message.sender.id == userId}">
                             <div class="sender-message">
                                 <span th:text="${message.content}"></span>
                                 <div class="time-stamp">
@@ -41,7 +35,7 @@
                             </div>
                         </div>
                         <!-- Check if the message sender is the therapist -->
-                        <div class="message-container" th:if="${message.senderId != userId}">
+                        <div class="message-container" th:if="${message.sender.id != userId}">
                             <div class="receiver-message">
                                 <span th:text="${message.content}"></span>
                                 <div class="time-stamp">
