--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<div th:replace="fragments/common-header :: common-header"></div>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Registration-MHSN</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+    <title>Registration-MHSN</title>
 </head>
 <body>
 
@@ -17,73 +15,81 @@
 <div th:replace="fragments/sidebar :: sidebar"></div>
 
 <!-- Main content area -->
-<main role="main" class="main-content">
-  <div class="container">
-    <div class="pt-3">
-      <h1>User Registration</h1>
-      <form th:action="@{/registration}" th:object="${user}" method="POST">
-        <!-- Fields for Normal User Registration -->
+<main class="main-content" role="main">
+    <div class="container">
+        <div class="pt-3">
+            <h1>User Registration</h1>
+            <form method="POST" th:action="@{/registration}" th:object="${user}">
+                <!-- Fields for Normal User Registration -->
 
-        <!-- Username -->
-        <div class="form-group">
-          <label for="userName">Username</label>
-          <input class="form-control" id="userName" th:field="*{userName}" placeholder="Enter your username" required type="text">
-        </div>
-        <!-- Email -->
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input class="form-control" id="email" th:field="*{email}" placeholder="Enter your email address" required type="email">
-        </div>
-        <!-- Age & Mobile Number -->
-        <!-- Age -->
-        <div class="form-group">
-          <label for="age">Age</label>
-          <input class="form-control" id="age" th:field="*{age}" placeholder="Enter your age" required type="number">
-        </div>
-        <!-- Mobile Number -->
-        <div class="form-group">
-          <label for="mobileNo">Mobile Number</label>
-          <input class="form-control" id="mobileNo" th:field="*{mobileNo}" placeholder="Enter your mobile number" required type="text">
-        </div>
-        <div class="form-group">
-          <label for="gender">Select Gender</label>
-          <select class="form-control" id="gender" th:field="*{gender}" required>
-            <option th:value="Male">Male</option>
-            <option th:value="Female">Female</option>
-            <option th:value="Other">Other</option>
-          </select>
-        </div>
-        <!-- Address -->
-        <div class="form-group">
-          <label for="address">Address</label>
-          <input class="form-control" id="address" th:field="*{address}" placeholder="Enter your address" required type="text">
-        </div>
-        <!-- Password & Confirm Password -->
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input class="form-control" id="password" th:field="*{password}" placeholder="Enter your password" required type="password" pattern=".{6,}">
-        </div>
-        <div class="form-group">
-          <!-- Confirm Password -->
-          <label for="confirmPassword">Confirm Password</label>
-          <input class="form-control" id="confirmPassword" pattern=".{6,}" placeholder="Confirm your password" required type="password">
-          <span id="passwordError" class="text-danger"></span>
-        </div>
-        <button type="submit" class="btn btn-primary">Register</button>
-      </form>
-      <span class="text-center">Already a Member?</span>
-      <a th:href = "@{/show-login-page}" class="text-center">Login</a>
+                <!-- Username -->
+                <div class="form-group">
+                    <label for="userName">Username</label>
+                    <input class="form-control" id="userName" placeholder="Enter your username" required
+                           th:field="*{userName}" type="text">
+                </div>
+                <!-- Email -->
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input class="form-control" id="email" placeholder="Enter your email address" required
+                           th:field="*{email}" type="email">
+                </div>
+                <!-- Age & Mobile Number -->
+                <!-- Age -->
+                <div class="form-group">
+                    <label for="age">Age</label>
+                    <input class="form-control" id="age" placeholder="Enter your age" required th:field="*{age}"
+                           type="number">
+                </div>
+                <!-- Mobile Number -->
+                <div class="form-group">
+                    <label for="mobileNo">Mobile Number</label>
+                    <input class="form-control" id="mobileNo" placeholder="Enter your mobile number"
+                           required th:field="*{mobileNo}" type="text">
+                </div>
+                <div class="form-group">
+                    <label for="gender">Select Gender</label>
+                    <select class="form-control" id="gender" required th:field="*{gender}">
+                        <option th:value="Male">Male</option>
+                        <option th:value="Female">Female</option>
+                        <option th:value="Other">Other</option>
+                    </select>
+                </div>
+                <!-- Address -->
+                <div class="form-group">
+                    <label for="address">Address</label>
+                    <input class="form-control" id="address" placeholder="Enter your address" required
+                           th:field="*{address}" type="text">
+                </div>
+                <!-- Password & Confirm Password -->
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input class="form-control" id="password" pattern=".{6,}" placeholder="Enter your password"
+                           required th:field="*{password}" type="password">
+                </div>
+                <div class="form-group">
+                    <!-- Confirm Password -->
+                    <label for="confirmPassword">Confirm Password</label>
+                    <input class="form-control" id="confirmPassword" pattern=".{6,}" placeholder="Confirm your password"
+                           required type="password">
+                    <span class="text-danger" id="passwordError"></span>
+                </div>
+                <button class="btn btn-primary" type="submit">Register</button>
+            </form>
+            <span class="text-center">Already a Member?</span>
+            <a class="text-center" th:href="@{/show-login-page}">Login</a>
 
+        </div>
     </div>
-  </div>
-<!--  Toast-->
-  <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;" th:if="${error}">
-    <div class="toast-header bg-dark">
-      <strong class="mr-auto text-white">Error</strong>
-      <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
+    <!--  Toast-->
+    <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
+         th:if="${error}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Error</strong>
+            <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
+        </div>
+        <div class="toast-body bg-danger text-white" th:text="${error}"></div>
     </div>
-    <div class="toast-body bg-danger text-white" th:text="${error}"></div>
-  </div>
 
 </main>
 <!-- Footer -->
@@ -94,36 +100,36 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
-  $(document).ready(function () {
-      // Script to activate Bootstrap Toast
-      $('.toast').toast({
-          autohide: true,
-          delay: 5000, // 5 seconds
-          animation: true,
-          position: 'top-end'
-      }).toast('show');
+    $(document).ready(function () {
+        // Script to activate Bootstrap Toast
+        $('.toast').toast({
+            autohide: true,
+            delay: 5000, // 5 seconds
+            animation: true,
+            position: 'top-end'
+        }).toast('show');
 
-      // Add an event listener to the form on submission
-      $("form").submit(function (event) {
-          // Get the values of the password and confirmPassword fields
-          var password = $("#password").val();
-          var confirmPassword = $("#confirmPassword").val();
+        // Add an event listener to the form on submission
+        $("form").submit(function (event) {
+            // Get the values of the password and confirmPassword fields
+            var password = $("#password").val();
+            var confirmPassword = $("#confirmPassword").val();
 
-          // Check if the passwords match and are at least 6 characters long
-          if (password !== confirmPassword) {
-              // Display an error message
-              $("#passwordError").text("Passwords do not match");
-              event.preventDefault(); // Prevent form submission
-          } else if (password.length < 6) {
-              // Display an error message
-              $("#passwordError").text("Password must be at least 6 characters");
-              event.preventDefault(); // Prevent form submission
-          } else {
-              // Clear any previous error messages
-              $("#passwordError").text("");
-          }
-      });
-  });
+            // Check if the passwords match and are at least 6 characters long
+            if (password !== confirmPassword) {
+                // Display an error message
+                $("#passwordError").text("Passwords do not match");
+                event.preventDefault(); // Prevent form submission
+            } else if (password.length < 6) {
+                // Display an error message
+                $("#passwordError").text("Password must be at least 6 characters");
+                event.preventDefault(); // Prevent form submission
+            } else {
+                // Clear any previous error messages
+                $("#passwordError").text("");
+            }
+        });
+    });
 </script>
 
 </body>
