--- a/src/main/resources/templates/therapists/therapist-list.html
+++ b/src/main/resources/templates/therapists/therapist-list.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<div th:replace="fragments/common-header :: common-header"></div>
+
 <head>
-    <meta charset="UTF-8">
     <title>Therapists-MHSN</title>
-
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap4.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
-
 </head>
 <body>
 
@@ -68,7 +61,8 @@
                                 </a>
                             </span>
                             <span th:if="${isUser != null and !#strings.isEmpty(isUser) and isUser}">
-                                <a class="btn btn-primary" role="button" th:href="@{/show-user-therapist-message-list(receiverId=${therapist.id})}"> Send Message</a>
+                                <a class="btn btn-primary" role="button"
+                                   th:href="@{/show-user-therapist-message-list(receiverId=${therapist.id})}"> Send Message</a>
                             </span>
                         </td>
                     </tr>
