--- a/src/main/resources/templates/blogs/blog-details.html
+++ b/src/main/resources/templates/blogs/blog-details.html
@@ -37,10 +37,7 @@
 
 <!-- Footer -->
 <div th:replace="fragments/footer :: footer"></div>
+<div th:replace="fragments/common-scripts :: common-scripts"></div>
 
-<!-- Scripts -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
