--- a/src/main/resources/templates/chatbots/chatbot-question-answer-update.html
+++ b/src/main/resources/templates/chatbots/chatbot-question-answer-update.html
@@ -40,10 +40,7 @@
 
 <!-- Footer -->
 <div th:replace="fragments/footer :: footer"></div>
-
 <!-- Scripts -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<div th:replace="fragments/common-scripts :: common-scripts"></div>
 </body>
 </html>
