--- a/src/main/resources/templates/podcasts/add-podcast.html
+++ b/src/main/resources/templates/podcasts/add-podcast.html
@@ -54,9 +54,7 @@
 <div th:replace="fragments/footer :: footer"></div>
 
 <!-- Scripts -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<div th:replace="fragments/common-scripts :: common-scripts"></div>
 <script>
     function validateFileSize(input) {
     const maxSize = 10 * 1024 * 1024; // 10MB
