fragment password change

--- a/src/main/resources/templates/password-change.html
+++ b/src/main/resources/templates/password-change.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<div th:replace="fragments/common-header :: common-header"></div>
 <head>
   <title>Change Password-MHSN</title>
 </head>
